Created seed file
